fixed margin/spacing on homepage and screen sizing on confirmation page

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -55,3 +55,7 @@
 .descImg {
     width: 160%;
 }
+
+.drawerDiv {
+    margin-bottom: 40px;
+}
