--- a/src/components/SignUpForm/SignUpFormConfirmation.css
+++ b/src/components/SignUpForm/SignUpFormConfirmation.css
@@ -24,8 +24,16 @@
     margin-bottom: -15px;
 }
 
+@media (max-width: 400px) {
+    .tweetp {
+        width: 100vw;
+        font-size: 25px;
+        font-weight: bold;
+    }
+}
+
 .tweetp {
-    width: 100vw;
+    width: 500px;
     font-size: 25px;
     font-weight: bold;
 }
